fix(markdown): code block line numbers align with code lines

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -118,7 +118,8 @@ main {
 }
 
 code[class*="language-"],
-pre[class*="language-"] {
+pre[class*="language-"],
+.line-numbers {
   font-size: 1.25rem;
 }
 
